feat(device) detect brand Condor model: Griffe G6 (PHQ525) feat(device) detect brand Hisense model: Smartfren Andromax R (I46D1G) feat(device) detect brand Videocon model: Kryton 3 (V502430) feat(device) change device type Videocon VT75C feat(device) detect brand Walton models: Primo D6, Primo D8, Primo E8, Primo G6

--- a/Tests/fixtures/smartphone-13.yml
+++ b/Tests/fixtures/smartphone-13.yml
@@ -748,7 +748,7 @@
     engine: WebKit
     engine_version: "534.30"
   device:
-    type: smartphone
+    type: tablet
     brand: VD
     model: VT75C
   os_family: Android
