--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3243,7 +3243,7 @@ ConCorde:
 
 # Condor
 Condor:
-  regex: 'Allure M[13]|Griffe T[256789]|TFX712G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ520|PKT\-301|Plume (?:H1|L[123]|P8))[;/) ]|CTAB[^/;]+ Build'
+  regex: 'Allure M[13]|Griffe T[256789]|TFX712G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ52[05]|PKT\-301|Plume (?:H1|L[123]|P8))[;/) ]|CTAB[^/;]+ Build'
   device: 'smartphone'
   models:
     - regex: 'CTAB([^/;]+) Build'
@@ -3286,6 +3286,8 @@ Condor:
       model: 'Griffe G4'
     - regex: 'PHQ520'
       model: 'Griffe G5'
+    - regex: 'PHQ525'
+      model: 'Griffe G6'
     - regex: 'PGN\-?514'
       model: 'Plume P7'
     - regex: 'PGN\-?515'
@@ -5227,7 +5229,7 @@ Hasee:
 
 # Hisense
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HITV300C|M470BS[AE]|E2281|EG680|HLTE([237]00T|200M|21[23]T|22[13]E|310M|510T)'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HITV300C|M470BS[AE]|E2281|EG680|I46D1G|HLTE([237]00T|200M|21[23]T|22[13]E|310M|510T)'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -5246,6 +5248,8 @@ Hisense:
       model: 'E Max'
     - regex: 'HLTE223E'
       model: 'H30'
+    - regex: 'I46D1G'
+      model: 'Smartfren Andromax R'
     - regex: 'EG680'
       model: 'Smartfren Andromax Z'
     - regex: 'HLTE200T[);/ ]'
@@ -12328,13 +12332,16 @@ Vestel:
 
 # Videocon
 Videocon:
-  regex: 'Videocon[_ \-]|VT75C'
+  regex: 'Videocon[_ \-]|VT75C|V502430'
   device: 'smartphone'
   models:
     - regex: 'Videocon[_ \-]([a-z0-9]+)'
       model: '$1'
     - regex: 'VT75C[/;) ]'
       model: 'VT75C'
+      device: 'tablet'
+    - regex: 'V502430[/;) ]'
+      model: 'Kryton 3'
 
 # Vodafone
 Vodafone:
@@ -12541,7 +12548,7 @@ Vulcan:
 
 # Walton
 Walton:
-  regex: 'Walton|Walpad|Primo[ _](C[1234]?|D[12345]|E[12345]|EF[23]?|EM|F[1234567]i?|G[123457]|GF[234]?|GH[23]?|GM|H[2346]|HM|N|N1|NF|NX2?|R[12346]|RH2?|RM2?|RX[23]?|S[123456]|V1|X[1234]|Z|ZX)'
+  regex: 'Walton|Walpad|Primo[ _](C[1234]?|D[1-68]|E[1-58]|EF[23]?|EM|F[1-7]i?|G[1-7]|GF[234]?|GH[23]?|GM|H[2346]|HM|N|N1|NF|NX2?|R[12346]|RH2?|RM2?|RX[23]?|S[123456]|V1|X[1234]|Z|ZX)'
   device: 'smartphone'
   models:
     - regex: 'Walpad ([^;/]+) Build'
