--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3474,11 +3474,13 @@ CUBOT:
       model: 'King Kong 3'
     - regex: 'KING KONG'
       model: 'King Kong'
-    - regex: 'CUBOT Echo'
+    - regex: 'CUBOT[ _]Echo'
       model: 'Echo'
-    - regex: 'CUBOT_MANITO'
+    - regex: 'CUBOT[ _]MANITO'
       model: 'Manito'
-    - regex: 'MAX'
+    - regex: 'CUBOT[ _]MAGIC'
+      model: 'Magic'
+    - regex: 'CUBOT[ _]MAX'
       model: 'Max'
     - regex: 'NOTE Plus'
       model: 'Note Plus'
@@ -4646,12 +4648,14 @@ Evolio:
 
 # Evolveo
 Evolveo:
-  regex: 'EVOLVEO[ _]([^;/]*) Build'
+  regex: 'EVOLVEO'
   device: 'smartphone'
   models:
     - regex: 'Smart TV ([^;/]*) Build'
       device: 'tv'
       model: 'Smart TV $1'
+    - regex: 'EVOLVEO StrongPhone G([248])'
+      model: 'StrongPhone G$1'
     - regex: 'EVOLVEO[ _]([^;/]*) Build'
       model: '$1'
 
@@ -4985,7 +4989,7 @@ Ginzzu:
   models:
     - regex: 'GINZZU[_ ]?(S40[17]0|S4710|ST6040|ST6120)'
       model: '$1'
-    - regex: 'GINZZU[_ ]?(GT-(?:7105|70[1-4]0|7115|7210|[WX]831|X770|7810|8010))'
+    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X770|7810|8[01]10))'
       model: '$1'
       device: 'tablet'
     - regex: '(RS6[12]D) ULTIMATE'
@@ -5297,7 +5301,7 @@ Hoffmann:
   models:
     - regex: 'Neo[_ ](A[139]00)'
       model: 'Neo $1'
-    - regex: 'HOFFMANN[ _]X[-_ ](Prime|Twist)'
+    - regex: 'HOFFMANN[ _]X[-_ ](Prime|Twist|Max)'
       model: 'X $1'
 
 
@@ -14820,16 +14824,18 @@ Huadoo:
 
 # Gome
 Gome:
-  regex: 'GOME[_ ](2018X38A|2016G68A|2017M27A|C7_Note_Plus|U9|S1)[);/ ]'
+  regex: 'GOME[_ ](2018X38A|2016G68A|2017M27A|2016M25A|C7_Note_Plus|U9|S[17])[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'GOME[_ ](2018X38A)[);/ ]'
       model: 'C72'
     - regex: 'GOME[_ ](2016G68A)[);/ ]'
       model: 'K1'
+    - regex: 'GOME[_ ](2016M25A)[);/ ]'
+      model: 'U1'
     - regex: 'GOME[_ ](2017M27A)[);/ ]'
       model: 'U7'
-    - regex: 'GOME[_ ](C7_Note_Plus|U9|S1)[);/ ]'
+    - regex: 'GOME[_ ](C7_Note_Plus|U9|S[17])[);/ ]'
       model: '$1'
 
 # Voyo
