fix(browser) change browser engine Yaani Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2841,5 +2841,5 @@
     name: Yaani Browser
     short_name: YN
     version: 4.3.0.153
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
