--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -893,7 +893,7 @@
   name: 'Yaani Browser'
   version: '$1'
   engine:
-    default: 'WebKit'
+    default: 'Blink'
 
 #Vivaldi
 - regex: 'Vivaldi(?:/(\d+[\.\d]+))?'
