feat(device) detect brand Samsung models: GALAXY S10 (SM-G977N), GALAXY Halo (SM-J727AZ)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10200,7 +10200,7 @@ Samsung:
       model: 'GALAXY Ace 4'
     - regex: '(?:SAMSUNG-)?SM-G313[HU]'
       model: 'GALAXY Ace 4 Lite'
-    - regex: '(?:SAMSUNG-)?SM-G318H'
+    - regex: '(?:SAMSUNG-)?SM-G318H[);/ ]'
       model: 'GALAXY Ace 4 Neo'
     - regex: '(?:SAMSUNG-)?GT-I8190'
       model: 'GALAXY S III mini'
@@ -10382,7 +10382,7 @@ Samsung:
       model: 'GALAXY S9'
     - regex: '(?:SAMSUNG-)?SM-G965[FNUWX0]|SCV39'
       model: 'GALAXY S9+'
-    - regex: '(?:SAMSUNG-)?(?:SM-G973|SCV41)'
+    - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977N)|SCV41)'
       model: 'GALAXY S10'
     - regex: '(?:SAMSUNG-)?(?:SM-G975[0FUW]|SCV42)'
       model: 'GALAXY S10+'
@@ -10620,6 +10620,8 @@ Samsung:
       model: 'GALAXY Folder 2'
     - regex: '(?:SAMSUNG-)?SM-J321AZ'
       model: 'GALAXY Sol'
+    - regex: '(?:SAMSUNG-)?SM-J727AZ'
+      model: 'GALAXY Halo'
 
     # explicit phablet models
     - regex: '(?:SAMSUNG-)?GT-I9060'
