--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -4929,7 +4929,7 @@
   device:
     type: smartphone
     brand: SA
-    model: SM-G355H
+    model: GALAXY CORE 2
   os_family: Android
   browser_family: Unknown
 - 
