--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -2480,26 +2480,6 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; SM-G355H Build/KOT49H)
-  os:
-    name: Android
-    short_name: AND
-    version: 4.4.2
-    platform: ""
-  client:
-    type: browser
-    name: Android Browser
-    short_name: AN
-    version: ""
-    engine: WebKit
-    engine_version: ""
-  device:
-    type: smartphone
-    brand: SA
-    model: GALAXY CORE 2
-  os_family: Android
-  browser_family: Android Browser
--
   user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; SM-T531 Build/KOT49H)
   os:
     name: Android
@@ -3159,3 +3139,43 @@
     model: GALAXY Sol
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 Linux; U; Android 7.0; SAMSUNG-SM-J727AZ Build/NRD90M
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY Halo
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SM-G977N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.83 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S10
+  os_family: Android
+  browser_family: Chrome
