feat(device) detect brand Samsung models: GALAXY Folder 2 (SM-G160N), GALAXY M31 (SM-M315F)  GALAXY A11 (SM-A115F), GALAXY A20 (SM-A205S), GALAXY Tab S4 10.5" (SM-T835),  GALAXY Tab S5e 10.5" (SM-T725), GALAXY Note Fan Edition (SM-N935S, SM-N935F, SM-N935L, SM-N935K),  GALAXY J7 Duo (SM-J720F, SM-J720M);
fix(device) changed devices type of the brand Samsung: GALAXY M30, GALAXY M40;

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10029,7 +10029,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T830X'
       device: 'tablet'
       model: 'GALAXY Tab S4'
-    - regex: '(?:SAMSUNG-)?SM-T111'
+    - regex: '(?:SAMSUNG-)?SM-T835[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S4 10.5"'
+    - regex: '(?:SAMSUNG-)?SM-T725[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S5e 10.5"'
+    - regex: '(?:SAMSUNG-)?SM-T111[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab 3 7.0" Lite'
     - regex: '(?:SAMSUNG-)?SM-T116(?:BU|NU|NY)?'
@@ -10155,12 +10161,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T39[57]'
       device: 'tablet'
       model: 'GALAXY Tab Active 2'
-    - regex: '(?:SAMSUNG-)?SM-M305'
-      device: 'tablet'
-      model: 'GALAXY M30'
-    - regex: '(?:SAMSUNG-)?SM-M405'
-      device: 'tablet'
-      model: 'GALAXY M40'
+
 
     # explicit wearable models
     - regex: '(?:SAMSUNG )?SM-R820'
@@ -10466,7 +10467,9 @@ Samsung:
       model: 'GALAXY A10'
     - regex: '(?:SAMSUNG-)?SM-A107[FM]'
       model: 'GALAXY A10s'
-    - regex: '(?:SAMSUNG-)?SM-A205[FG]'
+    - regex: '(?:SAMSUNG-)?SM-A115F'
+      model: 'GALAXY A11'
+    - regex: '(?:SAMSUNG-)?SM-A205[FGS]'
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
       model: 'GALAXY A20e'
@@ -10564,6 +10567,8 @@ Samsung:
       model: 'GALAXY J7 Pro'
     - regex: '(?:SAMSUNG-)?SM-J701(?:F|M)'
       model: 'GALAXY J7 Core' # also GALAXY J7 Nxt and GALAXY J7 Neo
+    - regex: '(?:SAMSUNG-)?SM-J720[FM]'
+      model: 'GALAXY J7 Duo'
     - regex: '(?:SAMSUNG-)?SM-J727(?:P|T|V)'
       model: 'GALAXY J7 V'
     - regex: 'SM-J7\[7\]'
@@ -10582,6 +10587,13 @@ Samsung:
       model: 'GALAXY M20'
     - regex: '(?:SAMSUNG-)?SM-M307(F|FN)'
       model: 'GALAXY M30s'
+    - regex: '(?:SAMSUNG-)?SM-M305'
+      model: 'GALAXY M30'
+    - regex: '(?:SAMSUNG-)?SM-M315F'
+      model: 'GALAXY M31'
+    - regex: '(?:SAMSUNG-)?SM-M405'
+      model: 'GALAXY M40'
+
     - regex: '(?:SAMSUNG-)?SM-G850F'
       model: 'GALAXY Alpha'
     - regex: '(?:SAMSUNG-)?SM-G910S'
@@ -10614,70 +10626,73 @@ Samsung:
       model: 'GALAXY Z3'
     - regex: '(?:SAMSUNG-)?SM-Z400[FY]'
       model: 'GALAXY Z4'
-    - regex: '(?:SAMSUNG-)?SM-(?:G150|G155S)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G150|G155S)[);/ ]'
       model: 'GALAXY Folder'
-    - regex: '(?:SAMSUNG-)?SM-G165'
+    - regex: '(?:SAMSUNG-)?SM-G16(?:5|0N)[);/ ]'
       model: 'GALAXY Folder 2'
-    - regex: '(?:SAMSUNG-)?SM-J321AZ'
+    - regex: '(?:SAMSUNG-)?SM-J321AZ[);/ ]'
       model: 'GALAXY Sol'
-    - regex: '(?:SAMSUNG-)?SM-J727AZ'
+    - regex: '(?:SAMSUNG-)?SM-J727AZ[);/ ]'
       model: 'GALAXY Halo'
 
     # explicit phablet models
-    - regex: '(?:SAMSUNG-)?GT-I9060'
+    - regex: '(?:SAMSUNG-)?GT-I9060[);/ ]'
       model: 'GALAXY Grand Neo'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9063'
+    - regex: '(?:SAMSUNG-)?GT-I9063[);/ ]'
       model: 'GALAXY Grand Neo Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9(?:080|128)'
+    - regex: '(?:SAMSUNG-)?GT-I9(?:080|128)[);/ ]'
       model: 'GALAXY Grand'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9168'
+    - regex: '(?:SAMSUNG-)?GT-I9168[);/ ]'
       model: 'GALAXY Grand Neo+'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9082'
+    - regex: '(?:SAMSUNG-)?GT-I9082[);/ ]'
       model: 'GALAXY Grand Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-N7000'
+    - regex: '(?:SAMSUNG-)?GT-N7000[);/ ]'
       model: 'GALAXY Note'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:(?:GT-)?N7100|SCH-I605|SCH-N719|SCH-R950|SPH-L900)'
+    - regex: '(?:SAMSUNG-)?SM-N935[FSLK][);/ ]'
+      model: 'GALAXY Note Fan Edition'
+      device: 'phablet'
+    - regex: '(?:SAMSUNG-)?(?:(?:GT-)?N7100|SCH-I605|SCH-N719|SCH-R950|SPH-L900)[);/ ]'
       model: 'GALAXY Note II'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-N7105'
+    - regex: '(?:SAMSUNG-)?GT-N7105[);/ ]'
       model: 'GALAXY Note II LTE'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G710[25L]?'
+    - regex: '(?:SAMSUNG-)?SM-G710[25L]?[);/ ]'
       model: 'GALAXY Grand 2'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|2)'
+    - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|2)[);/ ]'
       model: 'GALAXY Grand Max'
-    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHW]|0[AF]Z|1[FH])'
+    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHW]|0[AF]Z|1[FH])[);/ ]'
       model: 'GALAXY Grand Prime'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G532F'
+    - regex: '(?:SAMSUNG-)?SM-G532F[);/ ]'
       model: 'GALAXY Grand Prime Plus' # also GALAXY J2 Prime
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G532MT'
+    - regex: '(?:SAMSUNG-)?SM-G532MT[);/ ]'
       model: 'GALAXY J2 Prime (TV)'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G532[MG]'
+    - regex: '(?:SAMSUNG-)?SM-G532[MG][);/ ]'
       model: 'GALAXY J2 Prime'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N7502'
+    - regex: '(?:SAMSUNG-)?SM-N7502[);/ ]'
       model: 'GALAXY Note 3 Neo Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N750[L50]?'
+    - regex: '(?:SAMSUNG-)?SM-N750[L50]?[);/ ]'
       model: 'GALAXY Note 3 Neo'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N9002'
+    - regex: '(?:SAMSUNG-)?SM-N9002[);/ ]'
       model: 'GALAXY Note 3 Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22)'
+    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22)[);/ ]'
       model: 'GALAXY Note 3'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N910|N9100'
+    - regex: '(?:SAMSUNG-)?SM-N910|N9100[);/ ]'
       model: 'GALAXY Note 4'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N916[SK]'
