--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -5556,7 +5556,7 @@
     engine: WebKit
     engine_version: "537.36"
   device:
-    type: tablet
+    type: smartphone
     brand: SA
     model: GALAXY M30
   os_family: Android
@@ -5576,7 +5576,7 @@
     engine: WebKit
     engine_version: "537.36"
   device:
-    type: tablet
+    type: smartphone
     brand: SA
     model: GALAXY M40
   os_family: Android
