feat(device) detect brand Samsung models: GALAXY J7 (2018) (SM-J737A, SM-J737P, SM-J737S, SM-J737T, SM-J737T1, SM-J737V, SM-J737VPP); feat(device) detect brand Samsung model: GALAXY J3 (2018) (SM-J337VPP);

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10525,7 +10525,7 @@ Samsung:
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
       model: 'GALAXY J3 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-J337W'
+    - regex: '(?:SAMSUNG-)?SM-J337(?:W|VPP)'
       model: 'GALAXY J3 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
       model: 'GALAXY J4'
@@ -10549,7 +10549,7 @@ Samsung:
       model: 'GALAXY J7'
     - regex: '(?:SAMSUNG-)?SM-J700P'
       model: 'GALAXY J7 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-J737U'
+    - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP)[);/ ]'
       model: 'GALAXY J7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J700(?:T1|T)'
       model: 'GALAXY J7 (2016)'
@@ -10628,7 +10628,7 @@ Samsung:
       model: 'GALAXY Z4'
     - regex: '(?:SAMSUNG-)?SM-(?:G150|G155S)[);/ ]'
       model: 'GALAXY Folder'
-    - regex: '(?:SAMSUNG-)?SM-G16(?:5|0N)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-G16(?:50|0N)[);/ ]'
       model: 'GALAXY Folder 2'
     - regex: '(?:SAMSUNG-)?SM-J321AZ[);/ ]'
       model: 'GALAXY Sol'
@@ -10639,19 +10639,19 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-I9060[);/ ]'
       model: 'GALAXY Grand Neo'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9063[);/ ]'
+    - regex: '(?:SAMSUNG-)?GT-I9063'
       model: 'GALAXY Grand Neo Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9(?:080|128)[);/ ]'
+    - regex: '(?:SAMSUNG-)?GT-I9(?:080|128)'
       model: 'GALAXY Grand'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9168[);/ ]'
+    - regex: '(?:SAMSUNG-)?GT-I9168'
       model: 'GALAXY Grand Neo+'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-I9082[);/ ]'
+    - regex: '(?:SAMSUNG-)?GT-I9082'
       model: 'GALAXY Grand Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-N7000[);/ ]'
+    - regex: '(?:SAMSUNG-)?GT-N7000'
       model: 'GALAXY Note'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N935[FSLK][);/ ]'
@@ -10660,7 +10660,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?(?:(?:GT-)?N7100|SCH-I605|SCH-N719|SCH-R950|SPH-L900)[);/ ]'
       model: 'GALAXY Note II'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?GT-N7105[);/ ]'
+    - regex: '(?:SAMSUNG-)?GT-N7105'
       model: 'GALAXY Note II LTE'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G710[25L]?[);/ ]'
@@ -10683,13 +10683,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-N7502[);/ ]'
       model: 'GALAXY Note 3 Neo Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N750[L50]?[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-N750[QL50]?'
       model: 'GALAXY Note 3 Neo'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N9002[);/ ]'
       model: 'GALAXY Note 3 Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22)[);/ ]'
+    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22[);/ ])'
       model: 'GALAXY Note 3'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N910|N9100[);/ ]'
