feat(device) detect brand Samsung models: GALAXY A31 (SM-A315F),  GALAXY A30 (SM-A505U1), GALAXY A50s (SM-A5070), GALAXY A40s (SM-A3050),  GALAXY A40 (SM-A405S), GALAXY A41 (SM-A415F)  GALAXY A50 (SM-A505N, SM-A505U, SM-A505W, SM-A505U1),  GALAXY J6 (SM-J600N, SM-J600L), GALAXY J3 (2017) (SM-J330L)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10477,16 +10477,22 @@ Samsung:
       model: 'GALAXY A20e'
     - regex: '(?:SAMSUNG-)?SM-A207[FM]'
       model: 'GALAXY A20s'
-    - regex: '(?:SAMSUNG-)?(?:SM-A305(?:FN|GN|GT|YN|[FG])|SCV43)'
+    - regex: '(?:SAMSUNG-)?(?:SM-A305(?:[GYF]N|GT|[NFG])|SCV43)'
       model: 'GALAXY A30'
     - regex: '(?:SAMSUNG-)?SM-A307(?:FN|GN|GT|[FG])'
       model: 'GALAXY A30s'
-    - regex: '(?:SAMSUNG-)?SM-A405F[NM]'
+    - regex: '(?:SAMSUNG-)?SM-A315F'
+      model: 'GALAXY A31'
+    - regex: '(?:SAMSUNG-)?SM-A405(?:F[NM]|S)'
       model: 'GALAXY A40'
-    - regex: '(?:SAMSUNG-)?SM-A3051'
+    - regex: '(?:SAMSUNG-)?SM-A305[01][);/ ]'
       model: 'GALAXY A40s'
-    - regex: '(?:SAMSUNG-)?SM-A505(?:FN|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A415F'
+      model: 'GALAXY A41'
+    - regex: '(?:SAMSUNG-)?SM-A505(?:FN|[FGNW]|U1?)'
       model: 'GALAXY A50'
+    - regex: '(?:SAMSUNG-)?SM-A5070[);/ ]'
+      model: 'GALAXY A50s'
     - regex: '(?:SAMSUNG-)?SM-A515[F]'
       model: 'GALAXY A51'
     - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|[W0])'
@@ -10525,7 +10531,7 @@ Samsung:
       model: 'GALAXY J3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
+    - regex: '(?:SAMSUNG-)?SM-J330[FGL][);/ ]'
       model: 'GALAXY J3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J337(?:W|VPP)'
       model: 'GALAXY J3 (2018)'
@@ -10539,7 +10545,7 @@ Samsung:
       model: 'GALAXY J5 (2017)'
     - regex: '(?:SAMSUNG-)?SM-G570[FMY]'
       model: 'GALAXY J5 Prime'
-    - regex: '(?:SAMSUNG-)?SM-J600[FG]'
+    - regex: '(?:SAMSUNG-)?SM-J600[NFGL]'  # 2018
       model: 'GALAXY J6'
     - regex: '(?:SAMSUNG-)?SM-J610[FG]'
       model: 'GALAXY J6+'
