feat(device) detect brand Samsung models: GALAXY J5 (2016) (SM-J510H, SM-J510K, SM-J510L, SM-J510S, SM-J510GN, SM-J510UN)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10539,7 +10539,7 @@ Samsung:
       model: 'GALAXY J4'
     - regex: '(?:SAMSUNG-)?SM-J500(?:F|FN|G|Y|M|H|N0)'
       model: 'GALAXY J5 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8F]|[FM]N)|5108)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8FHKLS]|[UFMG]N)|5108)[);/ ]'
       model: 'GALAXY J5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J530'
       model: 'GALAXY J5 (2017)'
