--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -3899,3 +3899,123 @@
     model: GALAXY J3 (2017)
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 7.1.1; en-US; SM-J510H Build/NMF26X AppleWebKit/534.30 KHTML, like Gecko Version/4.0 UCBrowser/11.0.5.850 U3/0.8.0 Mobile Safari/534.30
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 11.0.5.850
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 (2016)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 7.1.1; en-US; SM-J510K Build/NMF26X AppleWebKit/534.30 KHTML, like Gecko Version/4.0 UCBrowser/11.3.8.976 U3/0.8.0 Mobile Safari/534.30
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 11.3.8.976
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 (2016)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 7.1.1; en-US; SM-J510L Build/NMF26X AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.10.0.1196 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 12.10.0.1196
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 (2016)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 7.1.1; ru-RU; SM-J510S Build/NMF26X AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/57.0.2987.108 Mobile Safari/537.36 UCBrowser/12.10.0.1163 UCTurbo/1.4.6.900
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser Turbo
+    short_name: UT
+    version: 1.4.6.900
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 (2016)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 7.1.1; en-US; SM-J510GN Build/NMF26X AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.11.8.1186 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 12.11.8.1186
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 (2016)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 6.0.1; SM-J510UN Build/MMB29M; wv AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/75.0.3770.101 Mobile Safari/537.36 OPR/43.2.2254.140293
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    short_name: OM
+    version: 43.2.2254.140293
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 (2016)
+  os_family: Android
+  browser_family: Opera
