--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10421,7 +10421,7 @@ Samsung:
       model: 'GALAXY A3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-A310(?:N0|[FMY])'
       model: 'GALAXY A3 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-A320(?:FL|F|Y)'
+    - regex: '(?:SAMSUNG-)?SM-A320(?:FL|[FYX])'
       model: 'GALAXY A3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A500[LSWY]'
       model: 'GALAXY A5'
@@ -10473,6 +10473,8 @@ Samsung:
       model: 'GALAXY A11'
     - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)'
       model: 'GALAXY A20'
+    - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
+      model: 'GALAXY A21s'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
       model: 'GALAXY A20e'
     - regex: '(?:SAMSUNG-)?SM-A207[FM]'
@@ -10481,7 +10483,7 @@ Samsung:
       model: 'GALAXY A30'
     - regex: '(?:SAMSUNG-)?SM-A307(?:FN|GN|GT|[FG])'
       model: 'GALAXY A30s'
-    - regex: '(?:SAMSUNG-)?SM-A315F'
+    - regex: '(?:SAMSUNG-)?SM-A315[FN][);/ ]'
       model: 'GALAXY A31'
     - regex: '(?:SAMSUNG-)?SM-A405(?:F[NM]|S)'
       model: 'GALAXY A40'
@@ -10537,7 +10539,7 @@ Samsung:
       model: 'GALAXY J3 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
       model: 'GALAXY J4'
-    - regex: '(?:SAMSUNG-)?SM-J500(?:F|FN|G|Y|M|H|N0)'
+    - regex: '(?:SAMSUNG-)?SM-J500(?:[8F]|FN|G|Y|M|H|N0)[);/ ]'
       model: 'GALAXY J5 (2015)'
     - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8FHKLS]|[UFMG]N)|5108)[);/ ]'
       model: 'GALAXY J5 (2016)'
@@ -10589,10 +10591,16 @@ Samsung:
       model: 'GALAXY J9 7 Prime'
     - regex: 'SM-J9\[8\] Pro'
       model: 'GALAXY J9 8 Pro'
+    - regex: '(?:SAMSUNG-)?SM-M015F'
+      model: 'GALAXY M01'
     - regex: '(?:SAMSUNG-)?SM-M105[FG]'
       model: 'GALAXY M10'
+    - regex: '(?:SAMSUNG-)?SM-M115F'
+      model: 'GALAXY M11'
     - regex: '(?:SAMSUNG-)?SM-M205[FG]'
       model: 'GALAXY M20'
+    - regex: '(?:SAMSUNG-)?SM-M215F'
+      model: 'GALAXY M21'
     - regex: '(?:SAMSUNG-)?SM-M307(F|FN)'
       model: 'GALAXY M30s'
     - regex: '(?:SAMSUNG-)?SM-M305'
