feat(device) detect brand Samsung models: GALAXY J7 (2017) (SM-J730K, SAMSUNG SM-J727U, SM-J727S),  GALAXY Tab S2 8.0" LTE (SM-T719, SM-T719Y, SM-T719C), GALAXY Tab S2 9.7" WiFi (SM-T810),  GALAXY Tab S2 9.7" LTE (SM-T817, SM-T817A, SM-T817T, SM-T817W)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10101,10 +10101,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T805'
       device: 'tablet'
       model: 'GALAXY Tab S 10.5" LTE'
-    - regex: '(?:SAMSUNG-)?SM-T813'
+    - regex: '(?:SAMSUNG-)?SM-(?:T813|T810)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T815'
+    - regex: '(?:SAMSUNG-)?SM-T719[YC]?[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S2 8.0" LTE'
+    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" LTE'
     - regex: '(?:SAMSUNG-)?SM-T820'
@@ -10559,10 +10562,12 @@ Samsung:
       model: 'GALAXY J7'
     - regex: '(?:SAMSUNG-)?SM-J700P'
       model: 'GALAXY J7 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP)[);/ ]'
-      model: 'GALAXY J7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J700(?:T1|T)'
       model: 'GALAXY J7 (2016)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727[US])'
+      model: 'GALAXY J7 (2017)'
+    - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP)[);/ ]'
+      model: 'GALAXY J7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-C710F'
       model: 'GALAXY J7+ (C7)'
     - regex: '(?:SAMSUNG-)?SM-G610[FMY]'
