feat(device) detect new brand Soundmax models: SM-LED32M04S, SM-LED32M11S; feat(device) detect brand Samsung models: GALAXY A50 (SM-A505U), GALAXY A6 (SM-A600U),  GALAXY A6+ (SM-A6050), GALAXY A60 (SM-A6060), GALAXY A7 (2018) (SM-A750N),  GALAXY J1 mini Prime (SM-J106H, SM-J106B), GALAXY Folder 2 (SM-G1600),  GALAXY Note 5 (SM-N920P), GALAXY Note 4 LTE (SM-N916L), GALAXY A9 Pro (SM-G887N),  GALAXY J7 (2016) (SM-J710GN, SM-J7109), GALAXY Note 5 (SM-N920F), GALAXY Golden 3 (SM-W2016),  GALAXY On7 Prime (SM-G611K, M-G611L), GALAXY J3 (2016) (SM-J320R4, SM-J320W8)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9775,6 +9775,12 @@ Siemens:
     - regex: 'portalmmm/2.0 (SI[a-z0-9]+)'
       model: '$1'
 
+# Soundmax
+Soundmax:
+   regex: '(SM-LED32M(?:11|04)S)(?:_-Ver01)?[);/ ]'
+   device: 'tv'
+   model: '$1'
+
 # Samsung
 Samsung:
   regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV3[1-9]|404SC'
@@ -10269,17 +10275,19 @@ Samsung:
       model: 'GALAXY A5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A520[FKLSW]'
       model: 'GALAXY A5 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A600(?:AZ|FN|GN|T1|[AFGNPT])'
+    - regex: '(?:SAMSUNG-)?SM-A600(?:AZ|FN|GN|T1|[AFGNPTU])'
       model: 'GALAXY A6'
-    - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[0FG])'
       model: 'GALAXY A6+'
+    - regex: '(?:SAMSUNG-)?SM-A6060'
+      model: 'GALAXY A60'
     - regex: '(?:SAMSUNG-)?SM-A700(?:YD|[0FHKLS])'
       model: 'GALAXY A7'
     - regex: '(?:SAMSUNG-)?SM-A710[08FKLMSY]'
       model: 'GALAXY A7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A720[FS]'
       model: 'GALAXY A7 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGN])'
       model: 'GALAXY A7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISY])|SCV32'
       model: 'GALAXY A8'
@@ -10297,7 +10305,7 @@ Samsung:
       model: 'GALAXY A9 7'
     - regex: '(?:SAMSUNG-)?SM-A920F'
       model: 'GALAXY A9 (2018)'
-    - regex: '(?:SAMSUNG-)?SM-A910[0F]'
+    - regex: '(?:SAMSUNG-)?SM-(?:A910[0F]|G887N)'
       model: 'GALAXY A9 Pro'
     - regex: '(?:SAMSUNG-)?SM-A105[FGM]'
       model: 'GALAXY A10'
@@ -10317,7 +10325,7 @@ Samsung:
       model: 'GALAXY A40'
     - regex: '(?:SAMSUNG-)?SM-A3051'
       model: 'GALAXY A40s'
-    - regex: '(?:SAMSUNG-)?SM-A505(?:FN|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A505(?:F[NG]|U)'
       model: 'GALAXY A50'
     - regex: '(?:SAMSUNG-)?SM-A515[F]'
       model: 'GALAXY A51'
@@ -10329,7 +10337,7 @@ Samsung:
       model: 'GALAXY J1'
     - regex: '(?:SAMSUNG-)?SM-J105(?:B|H)'
       model: 'GALAXY J1 mini'
-    - regex: '(?:SAMSUNG-)?SM-J106M'
+    - regex: '(?:SAMSUNG-)?SM-J106[MHB]'
       model: 'GALAXY J1 mini Prime'
     - regex: '(?:SAMSUNG-)?SM-J120[AFHMT]'
       model: 'GALAXY J1 (2016)'
@@ -10349,7 +10357,7 @@ Samsung:
       model: 'GALAXY J3 Orbit'
     - regex: '(?:SAMSUNG-)?SM-J327T1'
       model: 'GALAXY J3 Prime'
-    - regex: '(?:SAMSUNG-)?SM-J320(?:FN|[AFGHMNPV])'
+    - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
       model: 'GALAXY J3 (2017)'
@@ -10379,7 +10387,7 @@ Samsung:
       model: 'GALAXY J7 (2015)'
     - regex: '(?:SAMSUNG-)?SM-J737U'
       model: 'GALAXY J7 (2018)'
-    - regex: '(?:SAMSUNG-)?SM-J700(?:T1|T)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J700(?:T1|T)|J710GN|J7109)'
       model: 'GALAXY J7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-C710F'
       model: 'GALAXY J7+ (C7)'
@@ -10423,7 +10431,7 @@ Samsung:
       model: 'GALAXY On7'     
     - regex: '(?:SAMSUNG-)?SM-G610[0KLS]'
       model: 'GALAXY On7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-G611[FS]'
+    - regex: '(?:SAMSUNG-)?SM-G611[FSKL]'
       model: 'GALAXY On7 Prime'
     - regex: '(?:SAMSUNG-)?SM-C5000'
       model: 'GALAXY C5'
@@ -10447,8 +10455,10 @@ Samsung:
       model: 'GALAXY Z4'
     - regex: '(?:SAMSUNG-)?SM-G150'
       model: 'GALAXY Folder'
-    - regex: '(?:SAMSUNG-)?SM-G165'
+    - regex: '(?:SAMSUNG-)?SM-(?:G165|G1600)'
       model: 'GALAXY Folder 2'
+    - regex: '(?:SAMSUNG-)?SM-W2016'
+      model: 'GALAXY Golden 3'
 
     # explicit phablet models
     - regex: '(?:SAMSUNG-)?GT-I9060'
@@ -10507,10 +10517,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-N910|N9100'
       model: 'GALAXY Note 4'
       device: 'phablet'
+    - regex: '(?:SAMSUNG-)?SM-N916L'
+      model: 'GALAXY Note 4 LTE'
+      device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N915'
       model: 'GALAXY Note 4 Edge'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N920[0ACGIKLST]'
+    - regex: '(?:SAMSUNG-)?SM-N920[0ACGIKLSTPF]'
       model: 'GALAXY Note 5'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N9208'
