feat(device) detect brand Samsung models: GALAXY A50 (SM-A505YN),  GALAXY A50s (SM-A507FN), GALAXY S10 (SM-G977U, SM-G977P, SM-G977N),  GALAXY S10+ (SM-G975X, SM-G975N)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10227,9 +10227,9 @@ Samsung:
       model: 'GALAXY S9'
     - regex: '(?:SAMSUNG-)?SM-G965[FNUWX0]|SCV39'
       model: 'GALAXY S9+'
-    - regex: '(?:SAMSUNG-)?SM-G973'
+    - regex: '(?:SAMSUNG-)?SM-(?:G973|G977[PUN])'
       model: 'GALAXY S10'
-    - regex: '(?:SAMSUNG-)?SM-G975[0FUW]'
+    - regex: '(?:SAMSUNG-)?SM-G975[0FUNWX]'
       model: 'GALAXY S10+'
     - regex: '(?:SAMSUNG-)?SM-G970[FU]'
       model: 'GALAXY S10e'
@@ -10325,8 +10325,10 @@ Samsung:
       model: 'GALAXY A40'
     - regex: '(?:SAMSUNG-)?SM-A3051'
       model: 'GALAXY A40s'
-    - regex: '(?:SAMSUNG-)?SM-A505(?:F[NG]|U)'
+    - regex: '(?:SAMSUNG-)?SM-A505(?:F[NG]|U|YN)'
       model: 'GALAXY A50'
+    - regex: '(?:SAMSUNG-)?SM-A507FN'
+      model: 'GALAXY A50s'
     - regex: '(?:SAMSUNG-)?SM-A515[F]'
       model: 'GALAXY A51'
     - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|[W0])'
