feat(device) detect brand Samsung models: GALAXY A60 (SM-A606Y), SM-A7070 (SM-A7070),  GALAXY A80 (SM-A8050, SM-A805F, SM-A805N, SM-A805X), GALAXY A90 (SM-A908B, SM-A908N),  GALAXY A9 (2018) (SM-A9200), GALAXY Fold (SM-F900F, SM-F900U, SM-F907B, SM-F907N),  GALAXY Xcover 4 (SM-G390W)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10185,7 +10185,7 @@ Samsung:
       model: 'GALAXY EXPRESS II'
     - regex: '(?:SAMSUNG-)?SM-G388F'
       model: 'GALAXY Xcover 3'
-    - regex: '(?:SAMSUNG-)?SM-G390F'
+    - regex: '(?:SAMSUNG-)?SM-G390[FW]'
       model: 'GALAXY Xcover 4'
     - regex: '(?:SAMSUNG-)?SM-G800'
       model: 'GALAXY S5 mini'
@@ -10279,7 +10279,7 @@ Samsung:
       model: 'GALAXY A6'
     - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[0FG])'
       model: 'GALAXY A6+'
-    - regex: '(?:SAMSUNG-)?SM-A6060'
+    - regex: '(?:SAMSUNG-)?SM-A60(?:60|6Y)'
       model: 'GALAXY A60'
     - regex: '(?:SAMSUNG-)?SM-A700(?:YD|[0FHKLS])'
       model: 'GALAXY A7'
@@ -10303,7 +10303,7 @@ Samsung:
       model: 'GALAXY A9'
     - regex: 'SM-A9\[7\]'
       model: 'GALAXY A9 7'
-    - regex: '(?:SAMSUNG-)?SM-A920F'
+    - regex: '(?:SAMSUNG-)?SM-A920[0F]'
       model: 'GALAXY A9 (2018)'
     - regex: '(?:SAMSUNG-)?SM-(?:A910[0F]|G887N)'
       model: 'GALAXY A9 Pro'
@@ -10333,6 +10333,12 @@ Samsung:
       model: 'GALAXY A51'
     - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|[W0])'
       model: 'GALAXY A70'
+    - regex: '(?:SAMSUNG-)?SM-A7070'
+      model: 'GALAXY A70s'
+    - regex: '(?:SAMSUNG-)?SM-A805[0FNX]'
+      model: 'GALAXY A80'
+    - regex: '(?:SAMSUNG-)?SM-A908[BN]'
+      model: 'GALAXY A90'
     - regex: '(?:SAMSUNG-)?GT-I9301I'
       model: 'GALAXY S III Neo'
     - regex: '(?:SAMSUNG-)?SM-J100(?:FN|MU|[FHM])'
@@ -10462,7 +10468,11 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-W2016'
       model: 'GALAXY Golden 3'
 
+
     # explicit phablet models
+    - regex: '(?:SAMSUNG-)?SM-(?:F900[FU]|F907[BN])'
+      model: 'GALAXY Fold'
+      device: 'phablet'
     - regex: '(?:SAMSUNG-)?GT-I9060'
       model: 'GALAXY Grand Neo'
       device: 'phablet'
